[tool.poetry]
name = "pylabeladjust"
version = "0.1.10"
description = "`pylabeladjust` is a port of Gephi's Label-Adjust algorithm to python."
authors = ["MNoichl <noichlmax@hotmail.co.uk>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.urls]
"Homepage" = "https://github.com/MNoichl/pylabeladjust"

[tool.poetry.dependencies]
python = "^3.10"
Pyqtree = "^1.0.0"
tqdm = "^4.66.2"
pandas = "^2.0.3"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"